oncall-games-kyverno-verify-images/assets/pod-signed.yaml
apiVersion: v1
kind: Pod
metadata: { name: signed, namespace: prod-apps }
spec:
  containers:
  - name: c
    image: ghcr.io/kyverno/test-verify-image:signed
  restartPolicy: Never
