oncall-games-kyverno-verify-images/assets/pod-unsigned.yaml
apiVersion: v1
kind: Pod
metadata: { name: unsigned, namespace: prod-apps }
spec:
  containers:
  - name: c
    image: ghcr.io/kyverno/test-verify-image:unsigned
  restartPolicy: Never
