oncall-games-kyverno-verify-images/assets/policy-verify-image.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata: { name: verify-image-prod }
spec:
  validationFailureAction: Enforce
  background: false
  rules:
  - name: verify-image
    match:
      any:
      - resources:
          kinds: [Pod]
          namespaceSelector:
            matchLabels: { env: prod }
    verifyImages:
    - imageReferences: ["ghcr.io/kyverno/test-verify-image*"]
      mutateDigest: true
      attestors:
      - entries:
        - keys:
            publicKeys: |
              -----BEGIN PUBLIC KEY-----
              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM
[...]
              -----END PUBLIC KEY-----
